public/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  font-size: 100%;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  box-sizing: border-box;
  font-family: 'Courier New', Courier, monospace;
}

h1 {
  margin-bottom: 1rem;
}

td {
  width: 70px;
  height: 70px;
  border: 1px solid black;
  margin: 4px;
}

td .circle {
  width: 100%;
  height: 100%;
  cursor: pointer;
  overflow: hidden;
  position: relative;
}

td .circle.red,
td .circle.blue {
  cursor: default;
  pointer-events: none;
}

table {
  border-spacing: 5px;
}

table.stop {
  pointer-events: none;
}

.circle::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  transform: translateY(-100%);
  -webkit-transform: translateY(-100%);
  -moz-transform: translateY(-100%);
}

:is(.circle.red, .circle.blue)::before {
  transition: 0.3s transform ease-in;
  transform: translateY(0);
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
}

.circle.red::before {
  background-color: #ff0000;
}

.circle.blue::before {
  background-color: #0000ff;
}

.btn {
  cursor: pointer;
  border: none;
  outline: none;
  padding: 1rem 1.5rem;
  color: #333;
  border-radius: 5px;
  transition: 0.3s background-color;
}

.btn:hover {
  background: #888;
}

.hidden {
  display: none !important;
}

.modal {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(204, 204, 204, 0.404);
  display: flex;
  justify-content: center;
  align-items: center;
}

.modal-body {
  background: #cad3c8;
  min-height: 10rem;
  min-width: 12rem;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  padding: 2rem 3rem;
  border-radius: 10px;
}

.loader {
  position: relative;
  height: 100px;
  width: 100px;
}

.spinner {
  border: 8px solid black;
  border-right-color: transparent;
  border-radius: 50%;
  height: 30px;
  left: 50%;
  margin: -23px 0 0 -23px;
  position: absolute;
  top: 50%;
  width: 30px;
  -webkit-animation: spinner 1s linear 0s infinite;
  -moz-animation: spinner 1s linear 0s infinite;
  animation: spinner 1s linear 0s infinite;
}

@keyframes spinner {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
  }
}

@media (max-width: 700px) {
  table {
    width: calc(100% - 20px);
    margin: auto;
  }
}

